Lutachu: Change naming way

--- a/src/components/acomment.styl
+++ b/src/components/acomment.styl
@@ -32,7 +32,7 @@
     position: absolute
     border-top: .2rem solid color-dark-grey
 
-  &.-left
+  &.is-left
     left: -2rem
     right: auto
     text-align: right
@@ -47,7 +47,7 @@
     position: static
     margin-right: 0
 
-    &.-left
+    &.is-left
       margin: 0
 
     &:before
