--- a/src/components/card.styl
+++ b/src/components/card.styl
@@ -17,7 +17,7 @@
   padding-bottom: .8em
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .2)
 
-  &.-rich .header
+  &.is-rich .header
     padding: 0
     margin: 0 -1px
     min-height: 50px
@@ -50,7 +50,7 @@
       text-align: right
       margin-bottom: 1.4em
 
-  &.-radius.-rich .header
+  &.is-radius.is-rich .header
     img,
     .rich-img img,
     img.rich-img
