--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -46,7 +46,7 @@ tr.active
 .table
   width: 100%
 
-.-bordered
+.is-bordered
   border: 1px solid color-border-light
 
   th
@@ -56,26 +56,26 @@ tr.active
     &:first-child
       border-left: 0
 
-.-striped
+.is-striped
   tbody
     tr:nth-child(odd)
       th
       td
         background-color: color-background-table
 
-.-hover
+.is-hover
   tbody
     tr:hover
       th
       td
         background-color: color-background-table-hover
 
-.-center
+.is-center
   th
   td
     text-align: center
 
-.-responsive
+.is-responsive
   min-hieght: .01%
   overflow-x: auto
 
