--- a/src/layout/grid.styl
+++ b/src/layout/grid.styl
@@ -13,10 +13,10 @@
 .row
   display: flex
 
-  &.-multiline
+  &.is-multiline
     flex-wrap: wrap
 
-  &.-gapless
+  &.is-gapless
     .column
       padding: 0
 
