--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -11,13 +11,13 @@
 
 // Position
 
-.absolute
+.is-absolute
   position: absolute
 
-.relative
+.is-relative
   position: relative
 
-.fixed
+.is-fixed
   position: fixed
 
 // Float
@@ -38,28 +38,28 @@
 
 // Display
 
-.block
+.is-block
   display: block !important
 
-.inline
+.is-inline
   display: inline !important
 
-.inline-block
+.is-inline-block
   display: inline-block !important
 
-.hide
+.is-hide
   display: none !important
   visibility: hidden !important
 
 // Font-family
 
-.serif
+.is-serif
   font-family: font-family-serif
 
-.kai
+.is-kai
   font-family: font-family-kai
 
-.monospace
+.is-monospace
   font-family: font-family-monospace
 
 // Other
@@ -78,8 +78,8 @@
     padding-left: 1em
     padding-right: 1em
 
-.-radius
+.is-radius
   border-radius: 3rem
 
-.-circle
+.is-circle
   border-radius: 99999999px
