--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -12,8 +12,7 @@
   z-index: 1000
   background-color: rgba(0, 0, 0, .4)
 
-  &.fixed
-    position: fixed
+  &.is-fixed
     top: 0
     left: 0
 
@@ -45,6 +44,6 @@
       &::hover
         background-color: rgba(0, 0, 0, .2)
 
-      &.active,
+      &.active
       &::active
         background-color: rgba(0, 0, 0, .6)
