Variables: Add more values to variables

--- a/src/components/card.styl
+++ b/src/components/card.styl
@@ -9,12 +9,16 @@
 @require "../variables"
 
 .card
+  position: relative
+
   padding: 0
   background: #fff
+
   margin-bottom: 1em
-  border-radius: 3px
-  position: relative
   padding-bottom: .8em
+
+  border-radius: border-radius-width
+
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .2)
 
   &.is-rich .header
