--- a/src/elements/blockquote.styl
+++ b/src/elements/blockquote.styl
@@ -14,7 +14,7 @@ blockquote
   line-height: 1.62
 
   color: color-dark-grey
-  border-left: .3rem solid color-border-normal
+  border-left: border-width solid color-border-normal
 
   a
     color: color-link-grey
