--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -27,7 +27,7 @@ pre
 
   color: color-dark-grey
   background: color-background-code
-  border-left: .3rem solid color-border-normal
+  border-left: border-width solid color-border-normal
 
   transition: .3s ease border-left-color
 
