--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -6,6 +6,8 @@
 // MIT License                                  ||
 // ===============================================
 
+@require "../variables"
+
 /**
  * Create a normal button
  *
@@ -16,7 +18,7 @@ make-button(color)
   outline: 0
 
   cursor: pointer
-  border-radius: 3px
+  border-radius: border-radius-width
 
   text-align: center
   line-height: 1.5em
