--- a/src/variables.styl
+++ b/src/variables.styl
@@ -6,12 +6,18 @@
 // MIT License                                  ||
 // ===============================================
 
+/**
+ * Font families
+ */
 font-family-sans-serif = "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", sans-serif
 font-family-serif      = Georgia, "Times New Roman", Times, SimSun, serif
 font-family-kai        = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif
 font-family-monospace  = 'Source Code Pro', Monaco, Menlo, Consolas, "Courier New", monospace
 font-family-normal = font-family-sans-serif
 
+/**
+ * Colors
+ */
 color-normal    = #333
 color-dark-grey = #888
 color-link      = #111
@@ -34,7 +40,15 @@ color-border-normal = #ddd
 color-border-focus  = #888
 color-border-mark   = #eaea90
 
-// Media queries
+/**
+ * Others
+ */
+border-width: .3rem
+border-radius-width = .3rem
+
+/**
+ * Media queries
+ */
 mq-mobile = 'screen and (max-width: 40rem)'
 mq-tablet = 'screen and (min-width: 40rem) and (max-width: 80rem)'
 mq-desktop = 'screen and (min-width: 120rem)'
