--- a/src/components/acomment.styl
+++ b/src/components/acomment.styl
@@ -30,7 +30,7 @@
     width: 40%
     content: ''
     position: absolute
-    border-top: .2rem solid color-dark-grey
+    border-top: borde-width solid color-dark-grey
 
   &.is-left
     left: -2rem
