--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -79,7 +79,7 @@
     padding-right: 1em
 
 .is-radius
-  border-radius: 3rem
+  border-radius: border-radius-width
 
 .is-circle
   border-radius: 99999999px
