--- a/src/typography/figure.styl
+++ b/src/typography/figure.styl
@@ -9,31 +9,36 @@
 @require "../variables"
 
 figure
-  text-align: center
+  margin: 0
 
-  &.left,
-  &.right
-    width: 50%
-
-figcaption
-  font-size: 80%
-  margin-top: .5em
-
-  &::after
-    content: ""
-    width: 15%
-
-    display: block
-    margin: 1em auto .2em
-
-    color: color-dark-grey
-    border-bottom: 1px solid color-border-normal
-
-@media mq-mobile
+article
   figure
+    text-align: center
+
     &.left,
     &.right
-      width: 100%
-      margin: 0
-      padding: 1em 40px
-      float: none!important
+      width: 50%
+
+  figcaption
+    font-size: 80%
+    margin-top: .5em
+
+    &::after
+      content: ""
+      width: 15%
+
+      display: block
+      margin: 1em auto .2em
+
+      color: color-dark-grey
+      border-bottom: 1px solid color-border-normal
+
+@media mq-mobile
+  article
+    figure
+      &.left
+      &.right
+        width: 100%
+        margin: 0
+        padding: 1rem 4rem
+        float: none!important
