Icon: Use `ionicons` instead of `Foundation icons`

--- a/src/lutachu.styl
+++ b/src/lutachu.styl
@@ -9,7 +9,7 @@
 @require "normalize"
 @require "typography/typography"
 
-@require "fonts/foundation"
+@require "fonts/ionicons"
 @require "layout/grid"
 
 @require "typography/article"
