--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -83,3 +83,13 @@
 
 .is-circle
   border-radius: 99999999px
+
+.is-spin
+  animation: 1s spin infinite
+
+@keyframes spin
+  0%
+    transform rotate(0deg)
+
+  100%
+    transform rotate(360deg)
