--- a/src/components/card.styl
+++ b/src/components/card.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Components / Card.styl                       ||
-//                                              ||
-// =============================================||
-// Since 2015 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Components / Card.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 @require "../variables"
 
