--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -1,11 +1,11 @@
-// ============================================================================
-// Components / Nav.styl                                                     ||
-//                                                                           ||
-// ==========================================================================||
-// Since 2015 @ Rakume<i@fake.moe>                                           ||
-//            @ Awc Cho<orancho@outlook.com>                                 ||
-// MIT License                                                               ||
-// ============================================================================
+/**
+ * Components / Nav.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @author Awc Cho<orancho@outlook.com>
+ * @license MIT License
+ */
 
 .nav
   width: 100%
@@ -44,6 +44,6 @@
       &::hover
         background-color: rgba(0, 0, 0, .2)
 
-      &.active
+      &.is-active
       &::active
         background-color: rgba(0, 0, 0, .6)
