--- a/src/elements/blockquote.styl
+++ b/src/elements/blockquote.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Elements / Blockquote.styl                   ||
-//                                              ||
-// =============================================||
-// Since 2016 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Elements / Blockquote.styl
+ *
+ * @since 2.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 blockquote
   padding: 0 1.5rem
