--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Elements / Button.styl                       ||
-//                                              ||
-// =============================================||
-// Since 2015 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Elements / Button.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 @require "../variables"
 @require "../mixins/button"
