--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Elements / Code.styl                         ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Elements / Code.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 @require "../variables"
 
