--- a/src/lutachu.styl
+++ b/src/lutachu.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Lutachu.styl                                 ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Lutachu.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 @require "normalize"
 @require "typography/typography"
