--- a/src/mixins/border-radius.styl
+++ b/src/mixins/border-radius.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Mixins / Border-Radius.styl                  ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Mixins / Border-Radius.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 border-top-radius(n)
   border-radius n n 0 0
