--- a/src/typography/article.styl
+++ b/src/typography/article.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Typograhpy / Article.styl                    ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Typography / Article.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 article
 summary
