--- a/src/typography/zh/counter.styl
+++ b/src/typography/zh/counter.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Typograhpy / Zh / Counter.styl               ||
-//                                              ||
-// =============================================||
-// Since 2015 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Typography / Zh / Counter.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 .counter
   &:lang(zh)
