--- a/src/variables.styl
+++ b/src/variables.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Variables.styl                               ||
-//                                              ||
-// =============================================||
-// Since 2015 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Variables.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 /**
  * Font families
