--- a/src/elements/table.styl
+++ b/src/elements/table.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Elements / Table.styl                        ||
-//                                              ||
-// =============================================||
-// Since 2015 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Elements / Table.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 @require "../variables"
 
@@ -46,39 +46,39 @@ tr.active
 .table
   width: 100%
 
-.is-bordered
-  border: 1px solid color-border-light
+  &.is-bordered
+    border: 1px solid color-border-light
 
-  th
-  td
-    border-left: 1px solid color-border-light
+    th
+    td
+      border-left: 1px solid color-border-light
 
-    &:first-child
-      border-left: 0
+      &:first-child
+        border-left: 0
 
-.is-striped
-  tbody
-    tr:nth-child(odd)
-      th
-      td
-        background-color: color-background-table
+  &.is-striped
+    tbody
+      tr:nth-child(odd)
+        th
+        td
+          background-color: color-background-table
 
-.is-hover
-  tbody
-    tr:hover
-      th
-      td
-        background-color: color-background-table-hover
+  &.is-hover
+    tbody
+      tr:hover
+        th
+        td
+          background-color: color-background-table-hover
 
-.is-center
-  th
-  td
-    text-align: center
+  &.is-center
+    th
+    td
+      text-align: center
 
-.is-responsive
-  min-hieght: .01%
-  overflow-x: auto
+  &.is-responsive
+    min-hieght: .01%
+    overflow-x: auto
 
-  @media mq-mobile
-    width: 100%
-    overflow-y: hidden
+    @media mq-mobile
+      width: 100%
+      overflow-y: hidden
