--- a/src/mixins/box.styl
+++ b/src/mixins/box.styl
@@ -1,12 +1,10 @@
-// ===============================================
-// Mixins / Box.styl                            ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
-
-// Float
+/**
+ * Mixins / Box.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 clearfix()
   &:before
@@ -17,15 +15,11 @@ clearfix()
   &:after
     clear both
 
-// Center
-
 center()
   display block
 
   margin-left auto
   margin-right auto
-
-// Size
 
 size(w, h)
   width w
