--- a/src/mixins/button.styl
+++ b/src/mixins/button.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Mixins / Button.styl                         ||
-//                                              ||
-// =============================================||
-// Since 2015 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Mixins / Button.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 @require "../variables"
 
