--- a/src/typography/list.styl
+++ b/src/typography/list.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Typograhpy / List.styl                       ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Typography / List.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 ul
 ol
