--- a/src/typography/quote.styl
+++ b/src/typography/quote.styl
@@ -1,10 +1,10 @@
-// ===============================================
-// Typograhpy / Quote.styl                      ||
-//                                              ||
-// =============================================||
-// Since 2015 @ Rakume<i@fake.moe>              ||
-// MIT License                                  ||
-// ===============================================
+/**
+ * Typography / Quote.styl
+ *
+ * @since 1.0
+ * @author Rakume Hayashi<h@rakume.com>
+ * @license MIT License
+ */
 
 q
   &
