Button: Make icons and text look like in the same line

--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -14,8 +14,9 @@
   box-shadow: color-border-light 0 0 0 1px inset
 
   [class*=icon-]
-    margin-right: .5rem
-    font-size: 150%
+    margin-right: .2rem
+    display: inline-block
+    vertical-align: bottom
 
   color-name = primary secondary success error warning
   color-value = color-primary color-secondary color-success color-error color-warning
