Typography: Remove `text-decoration` of links

--- a/src/normalize.styl
+++ b/src/normalize.styl
@@ -89,7 +89,7 @@ template
 
 a
   background-color: transparent
-  text-deocration: none
+  text-decoration: none
 
 /**
  * Improve readability of focused elements when they are also in an
