--- a/src/variables.styl
+++ b/src/variables.styl
@@ -20,7 +20,7 @@ font-family-normal = font-family-sans-serif
  */
 color-normal    = #333
 color-dark-grey = #888
-color-link      = #111
+color-link      = #0275d8
 color-link-grey = #bbb
 
 color-primary   = #198ac8
