--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -8,42 +8,53 @@
  */
 
 .nav
+  padding: 0
+  margin: 0
+
   width: 100%
-  z-index: 1000
-  background-color: rgba(0, 0, 0, .4)
+
+  display: flex
+
+  li
+    margin: 0
+    list-style: none
+
+    a
+      padding: 0 .85em
+
+    &.nav-band a
+      font-weight: bold
+
+  .container
+    width: 100%
+    display: flex
+
+  .nav-group
+    display: flex
+
+    margin: 0
+    padding: 0
+
+    &.is-right
+      flex: 1
+      justify-content: flex-end
+
+  &.is-multiline
+    line-height: 3rem
+
+    .container
+      margin: 0
+      max-width: inherit
+
+    &
+    .container
+    .nav-group
+      flex-direction: column
+
+    a
+      padding: 0
 
   &.is-fixed
     top: 0
     left: 0
-
-  a
-    color: #fff
-    line-height: 3rem
-
-    text-decoration: none
-
-  a.band
-    font-weight: bold
-
-  .container
-    min-height: 3rem
-
-  ul.group
-    margin: 0 !important
-
-    li
-      float: left
-      margin: 0
-      list-style: none
-      transition: .3s ease;
-
-      a
-        display: block
-        padding: 0 .85em
-
-      &::hover
-        background-color: rgba(0, 0, 0, .2)
-
-      &.is-active
-      &::active
-        background-color: rgba(0, 0, 0, .6)
+    z-index: 1000
