Typography: Change `font-family-sans-serif`

--- a/src/variables.styl
+++ b/src/variables.styl
@@ -9,7 +9,7 @@
 /**
  * Font families
  */
-font-family-sans-serif = "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", sans-serif
+font-family-sans-serif = "Segoe UI", "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", sans-serif
 font-family-serif      = Georgia, "Times New Roman", Times, SimSun, serif
 font-family-kai        = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif
 font-family-monospace  = 'Source Code Pro', Monaco, Menlo, Consolas, "Courier New", monospace
