Typography: Remove `a`'s underline

--- a/src/normalize.styl
+++ b/src/normalize.styl
@@ -87,10 +87,13 @@ template /* 1 */
 
 /**
  * Remove the gray background on active links in IE 10.
+ * Remove text decoration
  */
 
 a
+  text-decoration: none
   background-color: transparent
+
 
 /**
  * Remove the outline on focused links when they are also active or hovered
