Typography: Remove `a`'s underline

--- a/src/normalize.styl
+++ b/src/normalize.styl
@@ -86,13 +86,13 @@ template /* 1 */
    ==========================================================================: */
 
 /**
- * Remove the gray background on active links in IE 10.
- * Remove text decoration
+ * 1. Remove underline
+ * 2. Remove the gray background on active links in IE 10.
  */
 
 a
-  text-decoration: none
-  background-color: transparent
+  text-decoration: none /* 1 */
+  background-color: transparent /* 2 */
 
 
 /**
