Typography: Remove margin of blockquote and code

--- a/src/lutachu.styl
+++ b/src/lutachu.styl
@@ -12,14 +12,14 @@
 @require "layout/grid"
 
 @require "typography/article"
+@require "typography/blockquote"
+@require "typography/code"
 @require "typography/figure"
 @require "typography/list"
 @require "typography/quote"
 @require "typography/title"
 
-@require "elements/blockquote"
 @require "elements/button"
-@require "elements/code"
 @require "elements/form"
 @require "elements/table"
 
