--- a/src/typography/blockquote.styl
+++ b/src/typography/blockquote.styl
@@ -1,15 +1,14 @@
 /**
  * Elements / Blockquote.styl
  *
- * @since 2.0
+ * @since 1.0
  * @author Rakume Hayashi<h@rakume.com>
  * @license MIT License
  */
 
 blockquote
   padding: 0 1.5rem
-  margin-left: -1.5rem
-  margin-right: -1.5rem
+  margin-left: 0
 
   line-height: 1.62
 
