--- a/src/components/card.styl
+++ b/src/components/card.styl
@@ -18,12 +18,28 @@
 
   box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .2)
 
+  .card-header
+  .card-content
+  .card-footer
+    padding: 1.5rem 1.5rem 0 1.5rem
+
+    &:last-child
+      padding-bottom: 1.5rem
+
+  .card-title
+    margin-bottom: 0
+
+  .card-meta
+  .card-descripition
+    margin-bottom: 0
+    color: gray-light
+
   .card-image
+    &:not(:first-child)
+      padding-top: 1.5rem
+
     img
       margin: 0
 
       width: 100%
       display: block
-
-  .card-content
-    padding: 2rem
