Typography: Change the style of list

--- a/src/typography/list.styl
+++ b/src/typography/list.styl
@@ -8,32 +8,25 @@
 
 ul
 ol
-  margin: 0 0 2em .4em
   padding-left: 2em
 
   line-height: 1.62
 
-ul
-  list-style-type: square
-
-ol
-  list-style-type: decimal
-
 li
-  margin-bottom: .2em
+  margin-bottom: .2rem
 
   ul
   ol
-    margin-top: 0
-    margin-bottom: 0
-    margin-left: 14px
+    margin: .5rem 0
 
 ul li
+  list-style-type: disc
+
   ul li
-    list-style-type: disc
+    list-style-type: circle
 
     ul li
-      list-style-type: circle
+      list-style-type: square
 
 ol li
   ol li
@@ -41,9 +34,3 @@ ol li
 
     ol li
       list-style-type: lower-roman
-
-  p
-    margin: .4em 0 .6em
-
-    &::before
-      content: none
