Typography: Remove useless lines

--- a/src/typography/quote.styl
+++ b/src/typography/quote.styl
@@ -12,7 +12,5 @@ q
   &:lang(zh-CN)
     quote: "\201c" "\201d" "\2018" "\2019" "\201c" "\201d" "\2018" "\2019" "\201c" "\201d" "\2018" "\2019"
 
-.poem.is-vertical:lang(zh) q
-.poem.is-vertical:lang(zh-CN) q
-q:lang(zh)
+  &:lang(zh)
     quote: "\300c" "\300d" "\300e" "\300f" "\300c" "\300d" "\300e" "\300f" "\300c" "\300d" "\300e" "\300f"
