--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -8,84 +8,63 @@
 
 @require "../variables"
 
-html
-  font-size: 62.5%
-
 body
-  font-size: 1.6em
-  font-weight: 400
+  color: global-color
+
+  font-size: global-font-size
+  font-weight: global-font-weight
+  font-family: global-font-family
+
+  line-height: global-line-height
 
   letter-spacing: .01em
 
-  line-height: 1.6
-
-  color: color-normal
-  font-family: font-family-normal
-
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
-
-.text-indent p::before
-  content: "\3000\3000"
-  display: inline
-
 p
+  margin-top: 0
+
   line-height: 1.86
+  word-break: break-word
 
-  word-break: break-all
-
-  &.text-author
-    display: block
-    text-align: right
-    font-weight: 800
-
-    &::before
-      content: '——' !important
+.lead
+  font-size: 1.2em
 
 a
-  color: color-link
+  color: link
 
   img
     border: 0
 
-img
-  max-width: 100%
-
-pre
-blockquote
-dl
-figure
-table
-p
-ul
-ol
+pre, blockquote
+figure, table, iframe
+p, ul, ol, dl
 form
   margin-bottom: 2.5rem
 
 b
 cite
 strong
-  color: color-normal
+  color: inherit
 
   a
     color: inherit
 
-img
-  margin: .2em 0
-
 hr
   display: block
+
   border: 0 none
   margin: 2em auto
-  border-top: 1px solid color-border-normal
 
-  + h1
-  + h2
-  + h3
-  + h4
-  + h5
-  + h6
-    margin-top: -.4em
+  border-top-width: 1px
+  border-top-style: solid
+  border-top-color: hr-border-color
+
+iframe
+  border: 0
+
+  width: 100%
+  max-width: 100%
+
+  overflow: auto
 
 abbr[title]
 dfn[title]
@@ -109,10 +88,11 @@ dd + dt
   cursor: move
 
 mark
-  color: color-normal
+  color: mark-color
+  background: mark-background-color
 
-  background: #FFFCC4
-  border-bottom: 1px solid #ffedce
+  border-bottom: 1px solid
+  border-bottom-color: mark-border-color
 
 tt
 kbd
@@ -121,15 +101,3 @@ pre
 samp
   font-size: 1em
   font-family: font-family-monospace
-
-kbd
-  color: #fff
-  font-size: 90%
-
-  padding: 2px 4px
-
-  font-family: font-family-monospace
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25)
-
-  kbd
-    padding: 0
